# iplinux-fakechroot-cross

./: .gitignore  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
autom4te.cache/: output.0  requests  traces.0
debian/: changelog  control  rules
m4/: readlink_argtypes.m4  scandir_argtypes.m4
src/: Makefile.am  Makefile.in  __fxstatat.c  __fxstatat64.c  __lxstat.c  __lxstat64.c  __open.c  __open64.c  __opendir2.c  __xmknod.c  __xstat.c  __xstat64.c  _xftw.c  _xftw64.c  access.c  acct.c  canonicalize_file_name.c  chdir.c  chmod.c  chown.c  chroot.c  common.h  creat.c  creat64.c  dlmopen.c  dlopen.c  eaccess.c  euidaccess.c  exec.c  execl.c  execle.c  execlp.c  execv.c  execve.c  fchmodat.c  fchownat.c  fopen.c  fopen64.c  freopen.c  freopen64.c  (+65 more)
