#AUTOMAKE_OPTIONS=foreign

pkglib_LTLIBRARIES=libfakechroot-cross.la
libfakechroot_cross_la_SOURCES = \
			    lib-main.c \
			    lib-cross.c\
			    util.c     \
			    access.c   \
			    acct.c     \
			    chdir.c    \
			    chmod.c    \
			    chown.c    \
			    chroot.c   \
			    creat.c    \
			    creat64.c  \
			    dlopen.c   \
			    fopen.c    \
			    fopen64.c  \
			    freopen.c  \
			    freopen64.c\
			    getcwd.c   \
			    getwd.c    \
			    glob.c     \
			    lchown.c   \
			    link.c     \
			    mkdir.c    \
			    mkfifo.c   \
			    mkstemp.c  \
			    mkstemp64.c\
			    mktemp.c   \
			    open.c     \
			    open64.c   \
			    pathconf.c \
			    readlink.c \
			    realpath.c \
			    remove.c   \
			    rename.c   \
			    rmdir.c    \
			    symlink.c  \
			    tempnam.c  \
			    tmpnam.c   \
			    truncate.c \
			    unlink.c   \
			    utime.c    \
			    utimes.c   \
			    execl.c    \
			    execle.c   \
			    execlp.c   \
			    execv.c    \
			    execve.c   \
			    execvp.c   \
			    get_current_dir_name.c \
			    setxattr.c \
			    scandir64.c \
			    lchmod.c \
			    ftw.c \
			    __open64.c \
			    __opendir2.c \
			    revoke.c \
			    mkdtemp.c \
			    llistxattr.c \
			    fts_open.c \
			    __lxstat64.c \
			    __xmknod.c \
			    listxattr.c \
			    _xftw64.c \
			    glob64.c \
			    scandir.c \
			    canonicalize_file_name.c \
			    ulckpwdf.c \
			    ftw64.c \
			    _xftw.c \
			    nftw.c \
			    truncate64.c \
			    lstat64.c \
			    __open.c \
			    stat64.c \
			    __lxstat.c \
			    lgetxattr.c \
			    glob_pattern_p.c \
			    lsetxattr.c \
			    nftw64.c \
			    euidaccess.c \
			    __xstat.c \
			    lremovexattr.c \
			    lckpwdf.c \
			    lutimes.c \
			    getxattr.c \
			    __xstat64.c \
			    dlmopen.c \
			    removexattr.c

libfakechroot_cross_la_LDFLAGS=-avoid-version

